Fix flexbox centering on Safari

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -47,7 +47,12 @@ MAIN.flex-wrapper {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
     align-items: center;
+    -webkit-justify-content: center;
     justify-content: center;
 }
 
